# sma-labo

./: CMakeLists.txt  README.md  package.xml  setup.py
script/: hand.py
study-01/: 01.launch  README.md  config.yaml  default.rviz  detector.py  imsave.py  penta_solver.py
study-01/web/: sample.html
study-02/: 02.launch  README.md  main.py  panel.launch  param.yaml
study-02/web/: eel_init.js  eel_param.js  eel_topic.js  sample.html
