<?xml version="1.0"?>
<package format="2">
  <name>sma-labo</name>
  <version>1.0.0</version>
  <description>Smart Robot Laboratory</description>

  <maintainer email="kazuki.hiraizumi@ca-giken.com">KazukiHiraizumi</maintainer>
  <license>BSD</license>
  <url type="website">http://ca-giken.com</url>
  <author email="kazuki.hiraizumi@ca-giken.com">KazukiHiraizumi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>smabo</depend>
  <depend>vcam3d</depend>
  <depend>ros_numpy</depend>
</package>
